--- a/first.css
+++ b/first.css
@@ -1,10 +1,12 @@
 /* custom-styles.css */
 body {
     background-color: #f0f0f0;
+    color: red;
   }
   
   h1 {
     color: #2c3e50;
     font-family: 'Arial', sans-serif;
+    background-color: green;
   }
   
